feat(LottoController): start(), 게임 흐름 제어